@@ -1,5 +1,6 @@
 Unreleased
 
+* Fix `type` property for internal URLs
 * Fix incorrect message when redirect has broken anchor
   (Timo Ludwig, #128)
 * Breaking change: Treat broken hash anchors as valid
